--- a/vignettes/event_models.Rmd
+++ b/vignettes/event_models.Rmd
@@ -18,33 +18,33 @@ An "event model" is a description of an fMRI experiment, which consists of a col
 
 Consider a basic design, consisting of four stimulus types, each repeated 4 times over the course of a single scanning run. The stimuli are pictures of *faces*, *scenes*, *tools* and *object* presented for 2s a piece in a pseudorandom order. There is a uniformly distributed (4-7s) inter-stimulus interval (ISI) separating each stimulus presentation.
 
-```{r, message=FALSE,fig.width = 6, fig.height = 4}
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
 library(fmrireg)
 ## the fourstimulus types
 cond <- c("face", "scene", "tool", "object")
 NSTIM <- length(cond)*4
 
 ## construct a design table
-design <- data.frame(stim=factor(sample(rep(cond, 4))), 
-                     ISI=sample(4:7, 16, replace=TRUE), 
+simple_design <- data.frame(stim=factor(sample(rep(cond, 4))), 
+                     ISI=sample(4:7, NSTIM, replace=TRUE), 
                      run=rep(1, NSTIM))
 
 ## calculate the event onsets
-design$onset <- cumsum(design$ISI+2) -2
+simple_design$onset <- cumsum(simple_design$ISI+2) -2
 
 ## create a 'sampling_frame' describing the temporal outline of the scan consisting of 70 images collected every once every 2 seconds.
 TR <- 2
 sframe <- sampling_frame(blocklens=70, TR)
 
 ## create the event model d
-emodel <- event_model(onset ~ hrf(stim), data=design, block = ~ run, sampling_frame=sframe)
+emodel <- event_model(onset ~ hrf(stim), data=simple_design, block = ~ run, sampling_frame=sframe)
 print(emodel)
 plot(emodel)
 ```
 
 ## A simple fMRI design with multiple blocks
 
-```{r, message=FALSE,fig.width = 6, fig.height = 4}
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
 
 cond <- c("face", "scene", "tool", "object")
 NSTIM <- length(cond)*4
@@ -70,3 +70,66 @@ emodel <- event_model(onset ~ hrf(stim), data=design, block = ~ run, sampling_fr
 print(emodel)
 plot(emodel)
 ```
+
+## A two-factor fMRI design with multiple blocks
+
+
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
+
+cond1 <- c("face", "scene", "tool", "object")
+cond2 <- c("attend", "ignore")
+comb <- expand.grid(stim=cond1, task=cond2)
+NSTIM <- nrow(comb) * 4
+
+design <- do.call(rbind, lapply(1:2, function(i) {
+  ind <- sample(rep(1:nrow(comb), length.out=NSTIM))
+  d <- data.frame(stim=factor(comb$stim[ind]),
+             task=factor(comb$task[ind]),
+             ISI=sample(2:6, NSTIM, replace=TRUE), 
+             run=rep(i, NSTIM))
+  d$onset <- cumsum(d$ISI+2) -2
+  d
+}))
+
+head(design)
+       
+## create a 'sampling_frame' describing the temporal outline of the scan consisting of 70 images collected every once every 2 seconds.
+TR <- 2
+sframe <- sampling_frame(blocklens=c(100,100), TR)
+
+## create the event model d
+emodel <- event_model(onset ~ hrf(stim, task), data=design, block = ~ run, sampling_frame=sframe)
+print(emodel)
+plot(emodel)
+```
+
+## An event-related design with an amplitude-modulated variable
+
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
+TR <- 2
+sframe <- sampling_frame(blocklens=70, TR)
+simple_design$RT <- scale(rnorm(nrow(simple_design), mean=700, sd=100))
+
+
+## create the event model d
+emodel <- event_model(onset ~ hrf(stim) + hrf(RT), data=simple_design, block = ~ run, sampling_frame=sframe)
+print(emodel)
+plot(emodel, "hrf.RT")
+```
+
+## An event-related design with an amplitude-modulated variable crossed with factor
+
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
+TR <- 2
+sframe <- sampling_frame(blocklens=70, TR)
+
+
+simple_design$RT <- scale(rnorm(nrow(simple_design), mean=700, sd=100))
+
+
+## create the event model d
+emodel <- event_model(onset ~ hrf(stim) + hrf(stim, RT), data=simple_design, block = ~ run, sampling_frame=sframe)
+print(emodel)
+plot(emodel, "hrf.stim_RT")
+```
+
