--- a/vignettes/hemodynamic_response.Rmd
+++ b/vignettes/hemodynamic_response.Rmd
@@ -25,7 +25,7 @@ vals <- evaluate(HRF_SPMG1, seq(0,20,by=.1))
 ## Gaussian hrf with default parameters (mean=6, sd=1.5)
 vals2 <- evaluate(HRF_GAUSSIAN, seq(0,20,by=.1)) 
 
-plot(seq(0,20,by=.1), vals, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals, vals2)))
+plot(seq(0,20,by=.1), vals, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals, vals2)), main="Gaussian and SPM Canonical HRF")
 lines(seq(0,20,by=.1), vals2, type="l", col=2)
 
 ```
@@ -33,13 +33,13 @@ lines(seq(0,20,by=.1), vals2, type="l", col=2)
 ## Changing Default Parameters
 
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
-library(purrr)
 
-## the 'HRF' constructor take a function and returns instantiates and HRF object. Several 'hrf' functions are provided which have default parameters. To change these parameters, we use the 'partial' function from the 'purrr' library:
+## the 'HRF' constructor take a function and returns instantiates and HRF object. Several 'hrf' functions are provided which have default parameters. 
 
-hrf_7_3 <- partial(hrf_gaussian, mean=7, sd=3)
-hrf_5_2 <- partial(hrf_gaussian, mean=5, sd=2)
-hrf_4_1 <- partial(hrf_gaussian, mean=4, sd=1)
+## the 'gen_hrf' function take an function and returns a new function substituting the supplied parameters as arguments.
+hrf_7_3 <- gen_hrf(hrf_gaussian, mean=7, sd=3)
+hrf_5_2 <- gen_hrf(hrf_gaussian, mean=5, sd=2)
+hrf_4_1 <- gen_hrf(hrf_gaussian, mean=4, sd=1)
 
 hrf1 <- HRF(hrf_7_3, name="hrf_gaussian_7_3")
 hrf2 <- HRF(hrf_5_2, name="hrf_gaussian_5_2")
@@ -50,7 +50,7 @@ vals2 <- evaluate(hrf2, seq(0,20,by=.1))
 vals3 <- evaluate(hrf3, seq(0,20,by=.1))
 
 ## notice that that each function is scaled so that it's highest value = 1.
-plot(seq(0,20,by=.1), vals1, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals1, vals2, vals3)))
+plot(seq(0,20,by=.1), vals1, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals1, vals2, vals3)), main="Three Gaussian HRFs")
 lines(seq(0,20,by=.1), vals2, type="l", col=2)
 lines(seq(0,20,by=.1), vals3, type="l", col=3)
 
@@ -63,13 +63,13 @@ Sometimes we want to model an event with multiple "basis functions". In this cas
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
 
 ## A third degree B-Spline with four bases.
-hrf_bs_4 <- HRF(partial(hrf_bspline, N=4), name="hrf_bspline_4")
+hrf_bs_4 <- HRF(gen_hrf(hrf_bspline, N=4), name="hrf_bspline_4")
 time <- seq(0,20, by=.1)
 bmat1 <- evaluate(hrf_bs_4, time)
 matplot(time, bmat1, xlab="Time", ylab="BOLD Response", type='l', main="Bspline HRF basis set (N=4)")
 
 ## A first degree B-Spline with 12 bases.
-hrf_bs_12 <- HRF(partial(hrf_bspline, degree=1, N=12), name="hrf_bspline_12")
+hrf_bs_12 <- HRF(gen_hrf(hrf_bspline, degree=1, N=12), name="hrf_bspline_12")
 time <- seq(0,20, by=.1)
 bmat1 <- evaluate(hrf_bs_12, time)
 matplot(time, bmat1, xlab="Time", ylab="BOLD Response", type='l', main="Bspline HRF basis set (N=12)")
