--- a/vignettes/baseline_model.Rmd
+++ b/vignettes/baseline_model.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 ## fMRI Baseline Model
 
-An "baseline model" refers to the set of regressors used to capture variance associated with noise signals in the fMRI time-series data. These regressors are not formed by convolving a hemodynamic response with event onsets, but rather directly model sources of variance in the data. Low-frequency baseline trends are often modeled with a set of basis functions, such as b-splines, polynomial regressors, or a fourier basis. Nuisance trends can also be derived from the data itself, for example, the global signal mean, motion parameters, estimated noise components via PCA or ICA. 
+An "baseline model" refers to the set of regressors used to capture variance associated with noise signals in the fMRI time-series data. These regressors are not formed by convolving a hemodynamic response with event onsets, but rather directly model sources of variance in the data. Low-frequency baseline trends are often modeled with a set of basis functions, such as b-splines, polynomial regressors, or a Fourier basis. Nuisance trends can also be derived from the data itself, for example, the global signal mean, motion parameters, or estimated noise components via PCA or ICA. 
 
 
 ## Basic baseline model with b-splines and polynomials
@@ -34,7 +34,7 @@ plot(bmodel2)
 
 ## Adding arbitrary nuisance regressors
 
-In addiiton to structured basis sets, we can also add arbitrary signals to the baseline model. Such singals are also organized by block on the assumption that nuisance signals are often block-specific and thus do not span across scans. To add a set of nusiance variables to the baseline model, then, they should be split by block and placed in a `list`.
+In addiiton to structured basis sets, we can also add arbitrary signals to the baseline model. Such signals are also organized by block on the assumption that nuisance signals are often block-specific and "reset" across scans. To add a set of nusiance variables to the baseline model, then, they should be split by block and placed in a `list`.
 
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
 devtools::load_all()
@@ -51,6 +51,8 @@ nuislist <- split(as.data.frame(cbind(nuis1, nuis2)), blockids(sframe))
 bmodel <- baseline_model(basis="bs", degree=5, sframe=sframe, nuisance_list=nuislist)
 print(terms(bmodel))
 plot(bmodel, term_name="nuisance")
+
+plot(bmodel, term_name="baseline_bs_5")
 
 ```
 
