--- a/vignettes/regressor.Rmd
+++ b/vignettes/regressor.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 ## Building fMRI regressors from event onsets
 
-Suppose we have a simple event-related fMRI design with 10 stimuli spaced every 12s. We want to model each event with the SPM canonical hemodynamic response function (HRF). The duration of each event is 0s, or "instantaneous". We have 140s worth of contiguous scanning data, collected ina  sngle run with a repetititon time (TR) of 2s.
+Suppose we have a simple event-related fMRI design with 10 stimuli spaced every 12s. We want to model each event with the SPM canonical hemodynamic response function (HRF). The duration of each event is 0s, or "instantaneous". We have 140s worth of contiguous scanning data, collected in a single scanning run with a repetititon time (TR) of 2s.
 
 ```{r, message=FALSE,fig.width = 6, fig.height = 4}
 library(fmrireg)
