--- a/README.rmd
+++ b/README.rmd
@@ -9,6 +9,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # In Development
 
+[![codecov](https://codecov.io/gh/fmrireg/NA/branch/master/graph/badge.svg)](https://codecov.io/github/bbuchsbaum/fmrireg?branch=master)
+[![Build Status](https://travis-ci.org/fmrireg/NA.svg?branch=master)](https://travis-ci.org/bbuchsbaum/fmrireg)
+
+```{r, echo = FALSE}                                                                                                        
+version <- as.vector(read.dcf('DESCRIPTION')[, 'Version'])                                                                 
+version <- gsub('-', '.', version)                                                                                      
+```        
+
+
 The `fmrireg` package is currently in development. The goal of the project is to provide functions for carrying out regression anaysis with *f*MRI data. It's Not Ready for Primetime, but still have a look at vignettes:
 
 ## Vignettes
