--- a/vignettes/contrasts.Rmd
+++ b/vignettes/contrasts.Rmd
@@ -99,9 +99,9 @@ knitr::kable(wts2$weights)
 
 ## Unit contrasts and the "implicit baseline"
 
-a "unit contrast"" tests whether activation, averaged over one or more conditions, is greater than zero. In this case "zero" is defined as the level of activation captured by the intercept term, or the *implicit baseline* in *f*MRI parlance. Because all beta estimates are already expressed relative to the intercept term, main effect contrast vectors always sum to 1, rather than 0. We therefore refer to the sum-to-one contrasts as: "unit contrasts". 
+a "unit contrast" tests whether activation, averaged over one or more conditions, is greater than the baseline activity. In this case "baseline" is defined as the level of activation captured by the intercept term, or the *implicit baseline* in *f*MRI parlance. Because all beta estimates are already expressed relative to the intercept term, main effect contrast vectors always sum to 1, rather than 0. We therefore refer to the sum-to-one contrasts as: "unit contrasts". 
 
-Below we show two unit contrasts, one testing for the effect of `face > baseline` and for `scene - baseline`:
+Below we show how to construct two unit contrasts, one testing for the effect of `face > baseline` and for `scene - baseline`:
 
 ```{r}
 con1 <- unit_contrast(~ category == "face", name="face_baseline")
@@ -109,7 +109,6 @@ con2 <- unit_contrast(~ category == "scene",name="scene_baseline")
 
 wts1 <- contrast_weights(con1, term1)
 wts2 <- contrast_weights(con2, term1)
-
 
 
 ```
